add swagger comments at contorller and structs
